# obs-avs

./: CMakeLists.txt  README.md
.github/workflows/: deploy-web-generator.yml  generate-pattern.yml  main.yml
cmake/: ObsPluginHelpers.cmake
data/locale/: en-US.ini
docs/: generate-pattern.sh  ntp-cue-generator.html  release-signing.md  synced-cue-generator.html
installer/: installer-Windows.iss.in
packaging/debian/: changelog  control  copyright
src/: av-offset-ruler.cpp  av-offset-ruler.hpp  plugin-macros.h.in  plugin-main.c  sync-test-dock.cpp  sync-test-dock.hpp  sync-test-monitor.c  sync-test-output.cpp  sync-test-output.hpp
tool/: avoffsetgen.py  configure-github-signing.sh  lint.sh  obs-media-source-sync-harness.cpp  run-obs-media-source-sync-test.sh
